# huffman

./: CMakeLists.txt  HuffmanAdaptive.cpp  Makefile  README.md  coded.raw  file_manipulation.cpp  file_manipulation.hpp  huff_codec  huffman  huffman.cpp  huffman.hpp  huffman.hpp.gch  huffman_adaptive.cpp  huffman_adaptive.hpp  huffman_adaptive.hpp.gch  huffman_static.cpp  huffman_static.h  huffman_static.hpp  huffman_static.hpp.gch  main.cpp  model.cpp  model.hpp  node.cpp  node.hpp  out.raw  test.raw  tree.cpp  tree.hpp  tree_.cpp
kko-testy/: Makefile  coded.raw  decoded.raw  huff_codec  out.raw  testMyProject.sh
kko-testy/test_out/: adaptive-hd01.raw  static-hd01.raw
kko-testy/test_res/: decode-adaptive-hd01.raw
kko-testy/tests/files/coded/: adaptive-1s.raw  adaptive-adaptive.raw  adaptive-differ.raw  adaptive-hd01.raw  adaptive-hd02.raw  adaptive-hd07.raw  adaptive-hd08.raw  adaptive-hd09.raw  adaptive-hd12.raw  adaptive-m-1s.raw  adaptive-m-adaptive.raw  adaptive-m-hd01.raw  adaptive-m-hd02.raw  adaptive-m-hd07.raw  adaptive-m-hd08.raw  adaptive-m-hd09.raw  adaptive-m-hd12.raw  adaptive-m-my.raw  adaptive-m-nk01.raw  adaptive-m-nullbytes.raw  adaptive-m-simple.raw  adaptive-my.raw  adaptive-nk01.raw  adaptive-simple.raw  static-1s.raw  static-adaptive.raw  static-differ.raw  static-hd01.raw  static-hd02.raw  static-hd07.raw  static-hd08.raw  static-hd09.raw  static-hd12.raw  static-m-1s.raw  static-m-adaptive.raw  static-m-differ.raw  static-m-hd01.raw  static-m-hd02.raw  static-m-hd07.raw  static-m-hd08.raw  (+9 more)
(+3 files in other folders)
